--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -64,6 +64,7 @@
     color: $color-secondary-text;
     margin-block-start: 0;
     margin-block-end: 0;
+    line-height: 1.8;
 
     @media only screen and (max-width: $breakpoint-md-max) {
       font-size: 14px;
@@ -313,6 +314,7 @@
 
       .desc__content {
         font-size: 16px;
+        line-height: 1.5;
         margin: 0;
         color: $color-secondary-text;
         overflow: hidden;
@@ -442,6 +444,11 @@
       flex-basis: calc(33.33% - 24px);
       margin: 0px 12px 24px;
       min-width: 0;
+
+      @media (max-width:$breakpoint-md-max) {
+        display: block;
+        margin: 32px 0 0;
+      }
     }
   }
 
